# openchef

./: .dockerignore  .gitignore  Cargo.toml  compose.yaml  data.dockerfile  go.work  go.work.sum  import.dockerfile  makefile  web.dockerfile
cgoprecomp/: file.go  go.mod  go.sum
servers/data/: advanced_info.go  agent_ramsay.go  basic_info.go  database.go  embed_text.go  go.mod  go.sum  import.go  main.go  semantic_search.go
servers/data/datadb/: db.go  go.mod  ingredients.go  recipes.go  units.go
servers/data/prompts/: recipie_summarise.md
servers/data/sql/: create_tables.sql  get_all_recipes.sql  insert_recipe.sql  update_advanced_info.sql
servers/import/: advanced_info.go  basic_info.go  go.mod  go.sum  import.go  main.go
servers/web/: Cargo.toml  database.go  go.mod  go.sum  home.templ  home_templ.go  main.go  recipe.templ  recipe_templ.go  utils.go
servers/web/src/: main.rs
servers/web/src/routes/: home.rs  mod.rs  recipe.rs
servers/web/src/utils/: db.rs  extract.rs  mod.rs  objects.rs
servers/web/static/: main.css
servers/web/styles/: tailwind.css
servers/web/templates/: base.html  base.templ  base_templ.go  go.mod  recipe.templ  recipe_templ.go
servers/web/templates/pages/: home.html  recipe.html
testing/: dataset.py  semsearch.py
utils/: objects.go
