[package]
name = "openchef-web"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
askama = "0.13.1"
axum = "0.8.4"
axum-server = "0.7.2"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"] }
rustls-acme = { version = "0.13.0", features = ["axum"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["json", "sqlite", "runtime-tokio", "tls-rustls", "derive"] }
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
tower-http = { version = "0.6.4", features = ["fs"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
